--- a/video-processing-service/package.json
+++ b/video-processing-service/package.json
@@ -12,10 +12,12 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "fluent-ffmpeg": "^2.1.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/fluent-ffmpeg": "^2.1.24",
     "@types/node": "^20.12.11",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
