--- a/video-processing-service/package.json
+++ b/video-processing-service/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@google-cloud/storage": "^7.11.0",
     "express": "^4.19.2",
+    "firebase-admin": "^12.1.0",
     "fluent-ffmpeg": "^2.1.2"
   },
   "devDependencies": {
